--- a/stock-web/src/main/resources/static/index.html
+++ b/stock-web/src/main/resources/static/index.html
@@ -2,15 +2,20 @@
 <html lang="zh">
 <head>
     <meta charset="utf-8">
-    <title>ECharts</title>
+    <title>股票分析平台主页</title>
     <!-- 引入 echarts.js -->
-    <script src="/lib/jquery/jquery-3.4.1.js" type="text/javascript"></script>
-    <script src="/lib/echarts/echarts.js" type="text/javascript"></script>
+    <script src="lib/jquery/jquery-3.4.1.js" type="text/javascript"></script>
+    <script src="lib/echarts/echarts.js" type="text/javascript"></script>
 </head>
 <body>
+<script src="scripts/test.js" type="text/javascript"></script>
+<h1>股市分析平台</h1>
+
+<h2>实验区</h2>
+<p>我的猫咪脾气<strong>爆</strong>:)</p>
+<img alt="主页背景图: 股票面板" src="images/background.jpg">
+<h2>展示区</h2>
 <!-- 为ECharts准备一个具备大小（宽高）的Dom -->
 <div id="main" style="width: 600px;height:400px;"></div>
-<script src="/js/test.js" type="text/javascript">
-</script>
 </body>
 </html>
