:sparkles: 股票数据补录-前端

--- a/stock-core/src/main/resources/static/html/stock-history.html
+++ b/stock-core/src/main/resources/static/html/stock-history.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>股票分析平台主页</title>
+    <title>股票历史走势</title>
 
     <link href="../styles/style.css" rel="stylesheet">
 
@@ -16,7 +16,8 @@
 <nav>
     <ul>
         <li><a href="../index.html">主页</a></li>
-        <li><a href="">股票历史走势</a></li>
+        <li><a href="stock-history.html">股票历史走势</a></li>
+        <li><a href="stock-data.html">股票数据更新</a></li>
     </ul>
 </nav>
 <main>
@@ -27,7 +28,7 @@
         </figure>
     </article>
     <aside>
-        <form action="" method="get">
+        <form action="" method="">
             <div>
                 <label for="input-select-code">选择股票代码</label>
                 <input autofocus id="input-select-code" list="code-list" type="search">
