--- a/stock-core/src/main/resources/static/index.html
+++ b/stock-core/src/main/resources/static/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>股票分析平台</title>
+    <link href="styles/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -12,8 +13,9 @@
 </header>
 <nav>
     <ul>
-        <li><a href="">主页</a></li>
+        <li><a href="index.html">主页</a></li>
         <li><a href="html/stock-history.html">股票历史走势</a></li>
+        <li><a href="html/stock-data.html">股票数据更新</a></li>
     </ul>
 </nav>
 <main></main>
