:sparkles: 股票数据统计-前端

--- a/stock-core/src/main/resources/static/html/stock-data.html
+++ b/stock-core/src/main/resources/static/html/stock-data.html
@@ -22,19 +22,20 @@
 </nav>
 <main>
     <article>
-        <p>股票数据补录</p>
+        <section>
+            <h2>股票数据补录</h2>
+            <form action="" method="">
+                <div>
+                    <label for="progress-complement">进度</label>
+                    <progress id='progress-complement' max="100" value="0"><span
+                            id="progress-complement-val">50%</span>
+                    </progress>
+                    <span id='progress-complement-val'></span>
+                    <button class="button" id="btn-complement" type="submit">补录数据到昨天</button>
+                </div>
+            </form>
+        </section>
     </article>
-    <aside>
-        <form action="" method="get">
-            <div>
-                <label for="progress-complement">进度</label>
-                <progress id='progress-complement' max="100" value="0"><span id="progress-complement-val">50%</span>
-                </progress>
-                <span id='progress-complement-val'></span>
-                <button class="button" id="btn-complement" type="submit">补录数据到昨天</button>
-            </div>
-        </form>
-    </aside>
 </main>
 <footer></footer>
 
