--- a/stock-core/src/main/resources/static/html/stock-data.html
+++ b/stock-core/src/main/resources/static/html/stock-data.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html id="doc-stock-data" lang="zh">
 
 <head>
     <meta charset="utf-8">
     <title>股票数据更新</title>
 
     <link href="../styles/style.css" rel="stylesheet">
-
+    <script src="../dist/bundle.js"></script>
 </head>
 
 <body>
@@ -27,10 +27,8 @@
             <form action="" method="">
                 <div>
                     <label for="progress-complement">进度</label>
-                    <progress id='progress-complement' max="100" value="0"><span
-                            id="progress-complement-val">50%</span>
-                    </progress>
-                    <span id='progress-complement-val'></span>
+                    <progress id='progress-complement' max="100" value="0"></progress>
+                    <span id='progress-complement-val'>未开始</span>
                     <button class="button" id="btn-complement" type="submit">补录数据到昨天</button>
                 </div>
             </form>
@@ -39,10 +37,6 @@
 </main>
 <footer></footer>
 
-<script src="../scripts/lib/jquery/jquery-3.4.1.js"></script>
-<script src="../scripts/lib/echarts/echarts.js"></script>
-<script src="../scripts/common/stringutil.js"></script>
-<script src="../scripts/stock-data.js"></script>
 </body>
 
 </html>
