:sparkles: 实现批量荐股功能。
TODO:
展示股票评论。
展示策略有效性
选择最优策略。

--- a/stock-core/src/main/resources/static/html/stock-history.html
+++ b/stock-core/src/main/resources/static/html/stock-history.html
@@ -120,6 +120,7 @@
                 </tr>
                 </tbody>
             </table>
+            <p class="high-risk" id="p-advice">建议</p>
         </section>
     </article>
 </main>
