--- a/stock-core/src/main/resources/static/html/stock-history.html
+++ b/stock-core/src/main/resources/static/html/stock-history.html
@@ -38,10 +38,11 @@
                 </div>
                 <div>
                     <label for="input-select-code">选择股票代码</label>
-                    <input autofocus id="input-select-code" list="code-list" pattern="[0-9]{6}" required
-                           type="search">
+                    <select autofocus id="input-select-code" list="code-list" pattern="[0-9]{6}" required></select>
+                    <!--
                     <datalist id="code-list">
                     </datalist>
+                    -->
                     <span aria-live="polite" class="error" id="code-error"></span>
                 </div>
                 <div>
