--- a/stock-core/src/main/resources/static/index.html
+++ b/stock-core/src/main/resources/static/index.html
@@ -14,8 +14,9 @@
 <nav>
     <ul>
         <li><a href="index.html">主页</a></li>
-        <li><a href="html/stock-history.html">股票历史走势</a></li>
-        <li><a href="html/stock-data.html">股票数据更新</a></li>
+        <li><a href="html/stock-history.html">历史走势</a></li>
+        <li><a href="html/stock-data.html">数据更新</a></li>
+        <li><a href="html/stock-analysis.html">分析推荐</a></li>
     </ul>
 </nav>
 <main></main>
