--- a/stock-core/src/main/resources/static/html/stock-analysis.html
+++ b/stock-core/src/main/resources/static/html/stock-analysis.html
@@ -46,7 +46,8 @@
                     <option value="PriceRate">溢价比策略</option>
                     <option value="GrowSpeed">增长速度策略</option>
                 </select>
-                <button id="btn-query" type="button">推荐</button>
+                <button id="btn-suggest" type="button">推荐</button>
+                <span hidden id="span-suggest-wait">运算中，请稍候</span>
             </div>
             <table id="table-suggest">
                 <caption>推荐结果</caption>
