:sparkles: 推荐股票展示名称。过滤ST股。

--- a/stock-core/src/main/resources/static/html/stock-analysis.html
+++ b/stock-core/src/main/resources/static/html/stock-analysis.html
@@ -53,10 +53,10 @@
                 <caption>推荐结果</caption>
                 <thead>
                 <tr>
-                    <th>代码</th>
-                    <th>风险</th>
-                    <th>预期利润率</th>
-                    <th>点评</th>
+                    <td>代码</td>
+                    <td>名称</td>
+                    <td>风险</td>
+                    <td>预期利润率</td>
                 </tr>
                 </thead>
                 <tbody>
