--- a/stock-core/src/main/resources/static/html/stock-analysis.html
+++ b/stock-core/src/main/resources/static/html/stock-analysis.html
@@ -45,6 +45,7 @@
                 <select id="sel-strategy">
                     <option value="PriceRate">溢价比策略</option>
                     <option value="GrowSpeed">增长速度策略</option>
+                    <option value="WisdomOfCrowd">群体智慧策略</option>
                 </select>
                 <button id="btn-suggest" type="button">推荐</button>
                 <span hidden id="span-suggest-wait">运算中，请稍候</span>
