--- a/stock-core/src/main/resources/static/html/stock-analysis.html
+++ b/stock-core/src/main/resources/static/html/stock-analysis.html
@@ -43,6 +43,7 @@
             <div>
                 <label for="sel-strategy">选择策略:</label>
                 <select id="sel-strategy">
+                    <option value="Fool">傻瓜式</option>
                     <option value="PriceRate">溢价比策略</option>
                     <option value="GrowSpeed">增长速度策略</option>
                     <option value="WisdomOfCrowd">群体智慧策略</option>
@@ -71,6 +72,10 @@
                 </tr>
                 </tbody>
             </table>
+            <p id="p-advice-risk">风险</p>
+            <p id="p-advice-message">评论</p>
+            <p id="p-advice-buydate">建议买入日期</p>
+            <p id="p-advice-selldate">建议卖出日期</p>
         </section>
     </article>
 </main>
