傻瓜推荐：修改前台

--- a/stock-core/src/main/resources/static/html/stock-analysis.html
+++ b/stock-core/src/main/resources/static/html/stock-analysis.html
@@ -72,10 +72,10 @@
                 </tr>
                 </tbody>
             </table>
-            <p id="p-advice-risk">风险</p>
-            <p id="p-advice-message">评论</p>
-            <p id="p-advice-buydate">建议买入日期</p>
-            <p id="p-advice-selldate">建议卖出日期</p>
+            <label for="p-advice-risk">风险</label><p id="p-advice-risk"></p>
+            <label for="p-advice-message">评论</label><p id="p-advice-message"></p>
+            <label for="p-advice-buydate">建议买入日期</label><p id="p-advice-buydate"></p>
+            <label for="p-advice-selldate">建议卖出日期</label><p id="p-advice-selldate"></p>
         </section>
     </article>
 </main>
