--- a/stock-core/src/main/resources/static/index.html
+++ b/stock-core/src/main/resources/static/index.html
@@ -13,7 +13,7 @@
 </header>
 <nav>
     <ul>
-        <li><a href="index.html">主页</a></li>
+        <li><a href="stock/analysis/foolSuggestStocks">一键推荐</a></li>
         <li><a href="html/stock-history.html">历史走势</a></li>
         <li><a href="html/stock-data.html">数据更新</a></li>
         <li><a href="html/stock-analysis.html">分析推荐</a></li>
