--- a/stock-core/src/main/resources/static/html/stock-data.html
+++ b/stock-core/src/main/resources/static/html/stock-data.html
@@ -2,6 +2,11 @@
 <html id="doc-stock-data" lang="zh">
 
 <head>
+    <!-- 响应式 -->
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="HandheldFriendly" content="true">
+
     <meta charset="utf-8">
     <title>股票数据更新</title>
 
