--- a/stock-core/src/main/resources/static/index.html
+++ b/stock-core/src/main/resources/static/index.html
@@ -2,6 +2,11 @@
 <html lang="zh">
 
 <head>
+    <!-- 响应式 -->
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="HandheldFriendly" content="true">
+
     <meta charset="utf-8">
     <title>股票分析平台</title>
     <link href="styles/style.css" rel="stylesheet">
@@ -13,7 +18,7 @@
 </header>
 <nav>
     <ul>
-        <li><a href="stock/analysis/foolSuggestStocks">一键推荐</a></li>
+        <li><a href="html/stock-analysis-fool.html">一键推荐</a></li>
         <li><a href="html/stock-history.html">历史走势</a></li>
         <li><a href="html/stock-data.html">数据更新</a></li>
         <li><a href="html/stock-analysis.html">分析推荐</a></li>
